solve css error vertical-align application

--- a/src/main/webapp/program/program.css
+++ b/src/main/webapp/program/program.css
@@ -1,10 +1,11 @@
 @charset "UTF-8";
 
 /***********************************************************/
+
 /* container */
 
 #container {
-	width: 1000px;
+	width: 1100px;
 	/*width: 75%;*/
 	margin: 0 auto;
 	height: auto;
@@ -12,6 +13,8 @@
 	margin-bottom: 80px;
 	text-align: center;
 	position: relative;
+	vertical-align: baseline;
+	background:transparent;
 }
 
 .cont-title {
